--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -99,7 +99,7 @@ header {
 
 @media (max-width: 1090px) {
     header {
-        width: 100vw;
+        width: 96vw;
         nav {
             display: none;
             position: fixed;
